Working with registration- smtp is down

--- a/templates/check_code.html
+++ b/templates/check_code.html
@@ -19,7 +19,8 @@
             <p>{{ form_check.code.label }}</p>
             <p>{{ form_check.code }}</p>
             <p>{{ form_check.submit }}</p>
-
+            <br>
+            <p>{{ registration_list }}</p>
         </form>
 </body>
 </html>
