Finish registration, left login to do

--- a/templates/reg_no_ok.html
+++ b/templates/reg_no_ok.html
@@ -12,7 +12,7 @@
     </head>
     <body>
     <header>
-        <p>Rejestracja przebiegła pomyślnie! Możesz się teraz zalogować!</p>
+        <p>Rejestracja nie przebiegła pomyślnie, ponieważ {{ problem_info }}</p>
     </header>
 </body>
 </html>
