--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,13 +1,9 @@
 <div class="navbar-end">
-    <a href="{{ url_for('_index.index') }}" class="navbar-item">HOME</a>
-    <br>
-    <a href="{{ url_for('bp_contact_form.contact') }}" class="navbar-item">CONTACT</a>
-    <br>
-    <a href="{{ url_for('bp_contact_form.messages') }}" class="navbar-item">MESSAGES</a>
-    <br>
-    <a href="{{ url_for('bp_auth_form.login') }}" class="navbar-item">LOGIN</a>
-    <br>
-    <a href="{{ url_for('bp_auth_form.registration') }}" class="navbar-item">REGISTRATION</a>
+    <button class="navbar-item" onclick="location.href='{{ url_for('bp_index_form.index') }}';">HOME</button>
+    <button class="navbar-item" onclick="location.href='{{ url_for('bp_contact_form.contact') }}';">CONTACT</button>
+    <button class="navbar-item" onclick="location.href='{{ url_for('bp_contact_form.messages') }}';">MESSAGES</button>
+    <button class="navbar-item" onclick="location.href='{{ url_for('bp_login_form.login') }}';">LOGIN</button>
+    <button class="navbar-item" onclick="location.href='{{ url_for('bp_auth_form.registration') }}';">REGISTRATION</button>
     <br>
 </div>
 
