Bootstrap included, few changes with directories

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "navbar.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 
@@ -11,6 +11,7 @@
         <title>Vet</title>
     </head>
     <body>
+        <img src="static/images/main.jpg" width=1100>
     <header>
         <p>
             Hi! I am Vet and here you can set our meeting with yours pet, ask me... cdn.
