--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -1,9 +1,5 @@
-<form action="{{ url_for('bp_login_form.logout') }}" method="POST">
-    <input type="hidden" name="user", value={{ user }}>
-    <button type="submit">Wyloguj</button>
-</form>
-  
-{% extends "navbar_login.html" %}
+{% extends "base.html" %}
+
 
 {% block content %}
 
@@ -16,6 +12,10 @@
         <title>Login {{ user }}</title>
     </head>
     <body>
+        <form action="{{ url_for('bp_login_form.logout') }}" method="POST">
+            <input type="hidden" name="user", value={{ user }}>
+            <button type="submit">Wyloguj</button>
+        </form>
         <p>Hej {{ user }}! To twoja strona!</p>
     </body>
 </html>
