--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,12 +1,34 @@
-<div class="navbar-end">
-    <button class="navbar-item" onclick="location.href='{{ url_for('bp_index_form.index') }}';">HOME</button>
-    <button class="navbar-item" onclick="location.href='{{ url_for('bp_contact_form.contact') }}';">CONTACT</button>
-    <button class="navbar-item" onclick="location.href='{{ url_for('bp_contact_form.messages') }}';">MESSAGES</button>
-    <button class="navbar-item" onclick="location.href='{{ url_for('bp_login_form.login') }}';">LOGIN</button>
-    <button class="navbar-item" onclick="location.href='{{ url_for('bp_auth_form.registration') }}';">REGISTRATION</button>
-    <br>
-</div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Veterinarians</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href='{{ url_for('bp_index_form.index') }}'>Home</a>
+            </li>
 
-<div class="container">
-    {% block content %} {% endblock %}
-</div>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href='{{ url_for('bp_contact_form.contact') }}'>Contact</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href='{{ url_for('bp_contact_form.messages') }}'>Messages</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href='{{ url_for('bp_login_form.login') }}'>Login</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href='{{ url_for('bp_auth_form.registration') }}'>Registration</a>
+            </li>
+
+        </ul>
+
+      </div>
+    </div>
+  </nav>
