--- a/templates/registration_ok.html
+++ b/templates/registration_ok.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
-
 {% block content %}
 
 <!DOCTYPE html>
@@ -12,10 +11,8 @@
         <title>Registration</title>
     </head>
     <body>
-    <header>
-        <p>Rejestracja nie przebiegła pomyślnie, ponieważ {{ problem_info }}</p>
-    </header>
-</body>
+        <p>Rejestracja przebiegła pomyślnie, możesz się teraz zalogować!</p>
+    </body>
 </html>
 
 {% endblock %}
