--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -14,9 +14,12 @@
     <body>
         <form action="{{ url_for('bp_login_form.logout') }}" method="POST">
             <input type="hidden" name="user", value={{ user }}>
-            <button type="submit">Wyloguj</button>
+            <button class="btn btn-outline-dark" type="submit">Wyloguj</button>
         </form>
-        <p>Hej {{ user }}! To twoja strona!</p>
+        <br>
+        <br>
+        <br>
+        <h3>Hej {{ user }}! To twoja strona!</h3>
     </body>
 </html>
 
